--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </header>
       <!-- Swiper-->
       <section class="section section-lg section-main-bunner section-main-bunner-filter">
-        <div class="main-bunner-img" style="background-image: url(&quot;images/perros/portada.jpg&quot;); background-size: cover;"></div>
+        <div class="main-bunner-img" style="background-image: url(&quot;images/perros/nosotros_img.png&quot;); background-size: cover;"></div>
         <div class="main-bunner-inner">
           <div class="container">
             <div class="row row-50 justify-content-lg-center align-items-lg-center">
@@ -90,7 +90,7 @@
             <div class="col-lg-6 col-xl-5">
               <div class="innset-xl-left-70">
                 <h3>Nuestra Mision</h3>
-                <p class="text-opacity-80">Cuiadar y proteger a los perritos abandonados.</p>
+                <p class="text-opacity-80">Cuidar y proteger a los perritos abandonados.</p>
                 <div class="row row-50">
                   <div class="col-md-6 col-lg-12">
                     <div class="box-icon-modern">
@@ -130,8 +130,8 @@
           <div class="row justify-content-center text-center">
             <div class="col-md-9 col-lg-7 wow-outer">
               <div class="wow slideInDown">
-                <h3>Latest Causes</h3>
-                <p>At Helper, there are various charity causes and projects, in which you can always take part. Feel free to learn about them below or browse our website for more information.</p>
+                <h3>Ayudanos a Curarlos</h3>
+                <p>Son perritos que necesitan de nosotros para sobrevivir y sanar de las enfermedades.</p>
               </div>
             </div>
           </div>
@@ -141,7 +141,7 @@
                 <article class="box-causes">
                   <div class="box-causes-img"><img src="images/causes-01-372x396.jpg" alt="" width="372" height="396"/><a class="button button-sm button-primary" href="#">Donate</a>
                   </div>
-                  <h4 class="font-weight-medium"><a href="#">Recycling for Charity</a></h4>
+                  <h4 class="font-weight-medium"><a href="#">Perrito 1</a></h4>
                   <p class="box-causes-donate"><span class="box-causes-donate-complete">$92,160</span> of <span>$100,000</span> raised
                   </p>
                 </article>
@@ -152,7 +152,7 @@
                 <article class="box-causes">
                   <div class="box-causes-img"><img src="images/causes-02-372x396.jpg" alt="" width="372" height="396"/><a class="button button-sm button-primary" href="#">Donate</a>
                   </div>
-                  <h4 class="font-weight-medium"><a href="#">Clean Water For People</a></h4>
+                  <h4 class="font-weight-medium"><a href="#">Perrito 2</a></h4>
                   <p class="box-causes-donate"><span class="box-causes-donate-complete">$52,380</span> of <span>$55,000</span> raised
                   </p>
                 </article>
@@ -163,7 +163,7 @@
                 <article class="box-causes">
                   <div class="box-causes-img"><img src="images/causes-03-372x396.jpg" alt="" width="372" height="396"/><a class="button button-sm button-primary" href="#">Donate</a>
                   </div>
-                  <h4 class="font-weight-medium"><a href="#">Children’s Education</a></h4>
+                  <h4 class="font-weight-medium"><a href="#">Perrito 3</a></h4>
                   <p class="box-causes-donate"><span class="box-causes-donate-complete">$42,280</span> of <span>$45,000</span> raised
                   </p>
                 </article>
@@ -179,14 +179,14 @@
               <div class="col-md-9 col-lg-8 col-xl-8 wow-outer">
                 <div class="innset-xl-right-30 innset-xl-left-30">
                   <div class="wow slideInDown">
-                    <h3>Subscribe to Stay Informed</h3>
+                    <h3>Suscribete Para mas Información</h3>
                     <form class="rd-form rd-mailform rd-form-inline" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
                       <div class="form-wrap">
                         <input class="form-input" id="subscribe-form-email" type="email" name="email" data-constraints="@Email @Required">
-                        <label class="form-label" for="subscribe-form-email">Your E-mail</label>
+                        <label class="form-label" for="subscribe-form-email">Tu Correo Electronico</label>
                       </div>
                       <div class="form-button">
-                        <button class="button button-primary button-lg" type="submit">Subscribe</button>
+                        <button class="button button-primary button-lg" type="submit">Suscribirme</button>
                       </div>
                     </form>
                   </div>
@@ -200,14 +200,14 @@
         <div class="container wow-outer">
           <div class="wow fadeIn">
             <div class="row row-50 row-lg-60">
-              <div class="col-12"><a href="index.html"><img src="images/logo-inverse-415x103.png" alt="" width="207" height="51"/></a></div>
+              <!--<div class="col-12"><a href=""><img src="" alt="" width="207" height="51"/></a></div>-->
               <div class="col-12">
                 <ul class="footer-minimal-nav">
-                  <li><a href="about-us.html">About Us</a></li>
-                  <li><a href="#">Causes</a></li>
-                  <li><a href="#">Gallery</a></li>
-                  <li><a href="#">Team</a></li>
-                  <li><a href="contacts.html">Contacts</a></li>
+                  <li><a href="about-us.html">Nosotros</a></li>
+                  <li><a href="#">Donaciones</a></li>
+                  <li><a href="#">Galeria</a></li>
+                  <li><a href="#">Equipo</a></li>
+                  <li><a href="contacts.html">Contactenos</a></li>
                 </ul>
               </div>
               <div class="col-12">
