--- a/typography.html
+++ b/typography.html
@@ -41,11 +41,11 @@
                   <div class="rd-navbar-nav-wrap">
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Nosotros</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Nosotros</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">Donaciones</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Perritos</a>
+                      <li class="rd-nav-item active"><a class="rd-nav-link" href="typography.html">Perritos</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contactanos</a>
                       </li>
