--- a/contacts.html
+++ b/contacts.html
@@ -41,7 +41,9 @@
                   <div class="rd-navbar-nav-wrap">
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Nosotros</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
+                      </li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">Nosotros</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">Donaciones</a>
                       </li>
