--- a/donaciones.html
+++ b/donaciones.html
@@ -43,9 +43,9 @@
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                       </li>
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="about-us.html">Nosotros</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">Nosotros</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="donaciones.html">Donaciones</a>
+                      <li class="rd-nav-item active"><a class="rd-nav-link" href="donaciones.html">Donaciones</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Perritos</a>
                       </li>
