--- a/typography.html
+++ b/typography.html
@@ -226,14 +226,14 @@
         <div class="container wow-outer">
           <div class="wow fadeIn">
             <div class="row row-50 row-lg-60">
-              <div class="col-12"><a href="index.html"><img src="images/logo-inverse-415x103.png" alt="" width="207" height="51"/></a></div>
+              <!--<div class="col-12"><a href=""><img src="" alt="" width="207" height="51"/></a></div>-->
               <div class="col-12">
                 <ul class="footer-minimal-nav">
-                  <li><a href="about-us.html">About Us</a></li>
-                  <li><a href="#">Causes</a></li>
-                  <li><a href="#">Gallery</a></li>
-                  <li><a href="#">Team</a></li>
-                  <li><a href="contacts.html">Contacts</a></li>
+                  <li><a href="about-us.html">Nosotros</a></li>
+                  <li><a href="#">Donaciones</a></li>
+                  <li><a href="#">Galeria</a></li>
+                  <li><a href="#">Equipo</a></li>
+                  <li><a href="contacts.html">Contactenos</a></li>
                 </ul>
               </div>
               <div class="col-12">
@@ -246,7 +246,7 @@
                 </ul>
               </div>
             </div>
-            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Helper</span><span>.&nbsp;</span><span>All Rights Reserved.</span><span>&nbsp;</span>Design&nbsp;by&nbsp;<a href="https://www.templatemonster.com/">Templatemonster</a></p>
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Huellas de mi amigo fiel</span><span>.&nbsp;</span><span>Derechos recervados.</span><span>&nbsp;</span>&nbsp;by&nbsp;Fulcrum<a href=""></a></p>
           </div>
         </div>
       </footer>
