--- a/contacts.html
+++ b/contacts.html
@@ -45,7 +45,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">Nosotros</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">Donaciones</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="donaciones.html">Donaciones</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Perritos</a>
                       </li>
