--- a/typography.html
+++ b/typography.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Poppins:300,300i,400,500,600,700,800,900,900i%7CRoboto:400%7CRubik:100,400,700">
-    <link rel="stylesheet" href="../css/compilado.css">
+    <link rel="stylesheet" href="css/compilado.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
@@ -83,67 +83,67 @@
       <section class="section section-lg bg-default">
         <div class="row" id="fotos">
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="../images/perros/perro1.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro1.jpg" alt=""></div>
               <div class="textoImg">Dusky</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="../images/perros/perro6.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro6.jpg" alt=""></div>
               <div class="textoImg">Layca</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="../images/perros/perro8.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro8.jpg" alt=""></div>
               <div class="textoImg">Petroni</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="../images/perros/perro9.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro9.jpg" alt=""></div>
               <div class="textoImg">Potra</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="../images/perros/perro10.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro10.jpg" alt=""></div>
               <div class="textoImg">Firulais</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="../images/perros/perro11.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro11.jpg" alt=""></div>
               <div class="textoImg">Roberta</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="../images/perros/perro12.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro12.jpg" alt=""></div>
               <div class="textoImg">Goku</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="../images/perros/perro13.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro13.jpg" alt=""></div>
               <div class="textoImg">Bulma</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="../images/perros/perro1.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro1.jpg" alt=""></div>
               <div class="textoImg">Roshi</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="../images/perros/perro6.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro6.jpg" alt=""></div>
               <div class="textoImg">Moon</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="../images/perros/perro8.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro8.jpg" alt=""></div>
               <div class="textoImg">Saco</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="../images/perros/perro9.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro9.jpg" alt=""></div>
               <div class="textoImg">Fiona</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="../images/perros/perro10.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro10.jpg" alt=""></div>
               <div class="textoImg">Peludo</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="../images/perros/perro11.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro11.jpg" alt=""></div>
               <div class="textoImg">Mimi</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="../images/perros/perro12.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro12.jpg" alt=""></div>
               <div class="textoImg">Dusky</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="../images/perros/perro13.jpg" alt=""></div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro13.jpg" alt=""></div>
               <div class="textoImg">Dusky</div>
           </div></a>
       </div>
