[feature]-carga de actualizacion

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contactanos</a>
                       </li>
-                    </ul><a class="button button-primary button-sm" href="#">Donate</a>
+                    </ul><a class="button button-primary button-sm" href="#">Donación</a>
                   </div>
-                </div><a class="button button-primary button-sm" href="#">Donate</a>
+                </div><a class="button button-primary button-sm" href="#">Donación</a>
               </div>
             </div>
           </nav>
@@ -91,7 +91,7 @@
             </div>
             <div class="col-lg-6 col-xl-5">
               <div class="innset-xl-left-70">
-                <h3>Nuestra Mision</h3>
+                <h3>Nuestra Misión</h3>
                 <p class="text-opacity-80">Cuidar y proteger a los perritos abandonados.</p>
                 <div class="row row-50">
                   <div class="col-md-6 col-lg-12">
@@ -107,7 +107,7 @@
                     <div class="box-icon-modern">
                       <div class="box-icon-inner decorate-circle"><span class="icon-xl lnr lnr-paw icon-primary"></span></div>
                       <div class="box-icon-caption">
-                        <h4><a href="#">Apdrinando Perritos</a></h4>
+                        <h4><a href="#">Apadrinando Perritos</a></h4>
                         <p>Algunos de nuestros Padrinos, que cuidan a los perritos rescatados.</p>
                       </div>
                     </div>
@@ -116,8 +116,8 @@
                     <div class="box-icon-modern">
                       <div class="box-icon-inner decorate-rectangle"><span class="icon-xl lnr lnr-paw icon-primary"></span></div>
                       <div class="box-icon-caption">
-                        <h4><a href="#">Perritos &amp; Bibloteca Fotografica</a></h4>
-                        <p>Mira nustros perritos ellos te necesitan</p>
+                        <h4><a href="#">Perritos &amp; Biblioteca Fotografica</a></h4>
+                        <p>Mira nuestros perritos ellos te necesitan</p>
                       </div>
                     </div>
                   </div>
@@ -222,7 +222,7 @@
                 </ul>
               </div>
             </div>
-            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Huellas de mi amigo fiel</span><span>.&nbsp;</span><span>Derechos recervados.</span><span>&nbsp;</span>&nbsp;by&nbsp;Fulcrum<a href=""></a></p>
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Huellas de mi amigo fiel</span><span>.&nbsp;</span><span>Derechos reservados.</span><span>&nbsp;</span>&nbsp;by&nbsp;Fulcrum<a href=""></a></p>
           </div>
         </div>
       </footer>
