[feature]-Cambios de Carmen Junco

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="donaciones.html">Donaciones</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Perritos</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Conócelos</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contactanos</a>
                       </li>
@@ -84,7 +84,7 @@
                 <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;: 0, &quot;x&quot;: 140,  &quot;smoothness&quot;: 50 }"><img src="images/perros/paginicial.jpg" alt=""></div>
                 <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;: 150, &quot;x&quot;: 0,  &quot;smoothness&quot;: 50 }"><img src="images/animate-img-2.jpg" alt=""></div>
                 <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;:70, &quot;x&quot;: -250,  &quot;smoothness&quot;: 50 }"><img src="images/animate-img-3.jpg" alt=""></div>
-                <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;:20, &quot;x&quot;: 20,  &quot;smoothness&quot;: 50 }"><img src="images/animate-img-4.jpg" alt=""></div>
+                <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;:20, &quot;x&quot;: 20,  &quot;smoothness&quot;: 50 }"><img src="images/perros/principal1_339x236.jpg" alt=""></div>
                 <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;:60, &quot;x&quot;: 70,  &quot;smoothness&quot;: 50 }"><img src="images/animate-img-5.jpg" alt=""></div>
                 <div class="box-img-animate-item" data-parallax-scroll="{&quot;y&quot;:0, &quot;x&quot;: 140,  &quot;smoothness&quot;: 50 }"><img src="images/animate-img-6.jpg" alt=""></div>
               </div>
@@ -141,10 +141,10 @@
             <div class="col-md-6 col-lg-4 wow-outer">
               <div class="wow fadeInUp">
                 <article class="box-causes">
-                  <div class="box-causes-img"><img src="images/causes-01-372x396.jpg" alt="" width="372" height="396"/><a class="button button-sm button-primary" href="#">Donate</a>
+                  <div class="box-causes-img"><img src="images/perros/guido.jpg" alt="" width="372" height="396"/><a class="button button-sm button-primary" href="#">Donate</a>
                   </div>
-                  <h4 class="font-weight-medium"><a href="#">Perrito 1</a></h4>
-                  <p class="box-causes-donate"><span class="box-causes-donate-complete">$92,160</span> of <span>$100,000</span> raised
+                  <h4 class="font-weight-medium"><a href="#">GUIDO</a></h4>
+                  <p class="box-causes-donate"><span class="box-causes-donate-complete">Ayúdanos</span> con <span>sus</span> simpáricas
                   </p>
                 </article>
               </div>
@@ -152,10 +152,10 @@
             <div class="col-md-6 col-lg-4 wow-outer">
               <div class="wow fadeInUp">
                 <article class="box-causes">
-                  <div class="box-causes-img"><img src="images/causes-02-372x396.jpg" alt="" width="372" height="396"/><a class="button button-sm button-primary" href="#">Donate</a>
+                  <div class="box-causes-img"><img src="images/perros/toby.jpg" alt="" width="372" height="396"/><a class="button button-sm button-primary" href="#">Donate</a>
                   </div>
-                  <h4 class="font-weight-medium"><a href="#">Perrito 2</a></h4>
-                  <p class="box-causes-donate"><span class="box-causes-donate-complete">$52,380</span> of <span>$55,000</span> raised
+                  <h4 class="font-weight-medium"><a href="#">TOBY</a></h4>
+                  <p class="box-causes-donate"><span class="box-causes-donate-complete">Ayúdanos</span> con <span>su</span> esterilización
                   </p>
                 </article>
               </div>
@@ -163,10 +163,10 @@
             <div class="col-md-6 col-lg-4 wow-outer">
               <div class="wow fadeInUp">
                 <article class="box-causes">
-                  <div class="box-causes-img"><img src="images/causes-03-372x396.jpg" alt="" width="372" height="396"/><a class="button button-sm button-primary" href="#">Donate</a>
+                  <div class="box-causes-img"><img src="images/perros/trotter.jpg" alt="" width="372" height="396"/><a class="button button-sm button-primary" href="#">Donate</a>
                   </div>
-                  <h4 class="font-weight-medium"><a href="#">Perrito 3</a></h4>
-                  <p class="box-causes-donate"><span class="box-causes-donate-complete">$42,280</span> of <span>$45,000</span> raised
+                  <h4 class="font-weight-medium"><a href="#">TROTTER</a></h4>
+                  <p class="box-causes-donate"><span class="box-causes-donate-complete">Ayúdanos</span> con <span>su</span> alimentación
                   </p>
                 </article>
               </div>
@@ -209,7 +209,7 @@
                   <li><a href="#">Donaciones</a></li>
                   <li><a href="#">Galeria</a></li>
                   <li><a href="#">Equipo</a></li>
-                  <li><a href="contacts.html">Contactenos</a></li>
+                  <li><a href="contacts.html">Contáctenos</a></li>
                 </ul>
               </div>
               <div class="col-12">
