--- a/typography.html
+++ b/typography.html
@@ -52,13 +52,13 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="donaciones.html">Donaciones</a>
                       </li>
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="typography.html">Perritos</a>
+                      <li class="rd-nav-item active"><a class="rd-nav-link" href="typography.html">Conócelos</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contactanos</a>
                       </li>
-                    </ul><a class="button button-primary button-sm" href="#">Donate</a>
+                    </ul><a class="button button-primary button-sm" href="#">Donar</a>
                   </div>
-                </div><a class="button button-primary button-sm" href="#">Donate</a>
+                </div><a class="button button-primary button-sm" href="#">Donar</a>
               </div>
             </div>
           </nav>
@@ -83,70 +83,151 @@
       <section class="section section-lg bg-default">
         <div class="row" id="fotos">
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro1.jpg" alt=""></div>
-              <div class="textoImg">Dusky</div>
+            <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/abuelo.jpeg" alt=""></div>
+            <div class="textoImg">Abuelo</div>
+        </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/apadrinaOreo.jpeg" alt=""></div>
+              <div class="textoImg">Oreo</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro6.jpg" alt=""></div>
-              <div class="textoImg">Layca</div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/bingo.jpg" alt=""></div>
+              <div class="textoImg">Bingo</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro8.jpg" alt=""></div>
-              <div class="textoImg">Petroni</div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/blanquita.jpg" alt=""></div>
+              <div class="textoImg">Blanquita</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro9.jpg" alt=""></div>
-              <div class="textoImg">Potra</div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/britany.jpg" alt=""></div>
+              <div class="textoImg">Britany</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro10.jpg" alt=""></div>
-              <div class="textoImg">Firulais</div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/burbuja.jpg" alt=""></div>
+              <div class="textoImg">Burbuja</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro11.jpg" alt=""></div>
-              <div class="textoImg">Roberta</div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/candela.jpg" alt=""></div>
+              <div class="textoImg">Candela</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro12.jpg" alt=""></div>
-              <div class="textoImg">Goku</div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/chatito.jpg" alt=""></div>
+              <div class="textoImg">Chatito</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro13.jpg" alt=""></div>
-              <div class="textoImg">Bulma</div>
+            <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/chatito1.jpg" alt=""></div>
+            <div class="textoImg">Chatitos</div>
+        </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/chato.jpg" alt=""></div>
+              <div class="textoImg">Chato</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro1.jpg" alt=""></div>
-              <div class="textoImg">Roshi</div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/chocolatada.jpg" alt=""></div>
+              <div class="textoImg">chocolatada</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro6.jpg" alt=""></div>
-              <div class="textoImg">Moon</div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/chocolaton.jpg" alt=""></div>
+              <div class="textoImg">Chocolaton</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro8.jpg" alt=""></div>
-              <div class="textoImg">Saco</div>
+            <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/clarita.jpeg" alt=""></div>
+            <div class="textoImg">Clarita</div>
+        </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/cloti.jpg" alt=""></div>
+              <div class="textoImg">Cloti</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro9.jpg" alt=""></div>
-              <div class="textoImg">Fiona</div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/daryl.jpg" alt=""></div>
+              <div class="textoImg">Daryl</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro10.jpg" alt=""></div>
-              <div class="textoImg">Peludo</div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/finita.jpg" alt=""></div>
+              <div class="textoImg">Finita</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro11.jpg" alt=""></div>
-              <div class="textoImg">Mimi</div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/fito.jpg" alt=""></div>
+              <div class="textoImg">Fito</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/perro12.jpg" alt=""></div>
-              <div class="textoImg">Dusky</div>
+              <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/flaquita.jpg" alt=""></div>
+              <div class="textoImg">Flaquita</div>
           </div></a>
           <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
-              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/perro13.jpg" alt=""></div>
-              <div class="textoImg">Dusky</div>
+              <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/gotten.jpg" alt=""></div>
+              <div class="textoImg">Gotten</div>
           </div></a>
-      </div>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/guido.jpg" alt=""></div>
+            <div class="textoImg">Guido</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/llamagas.jpg" alt=""></div>
+            <div class="textoImg">Llamagas</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/lulú.jpg" alt=""></div>
+            <div class="textoImg">Lulu</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/luna.jpg" alt=""></div>
+            <div class="textoImg">Luna</div>
+          </div></a>
+         <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/motitas.jpeg
+              " alt=""></div>
+            <div class="textoImg">Motitas</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/muñequita.jpg" alt=""></div>
+            <div class="textoImg">Muñequita</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/negrita.jpg" alt=""></div>
+            <div class="textoImg">Negrita</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/nena.jpg" alt=""></div>
+            <div class="textoImg">Nena</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/pitahaya.jpg" alt=""></div>
+            <div class="textoImg">Pitahaya</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/poderosa.jpg" alt=""></div>
+            <div class="textoImg">Poderosa</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/pomposa.jpg" alt=""></div>
+            <div class="textoImg">Pomposa</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/rollo.jpg" alt=""></div>
+            <div class="textoImg">Rollo</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/sultan.jpg" alt=""></div>
+            <div class="textoImg">Sultan</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/toby.jpg" alt=""></div>
+            <div class="textoImg">Toby</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/TORVI 2.jpg" alt=""></div>
+            <div class="textoImg">Torvi</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--macho" src="images/perros/trotter.jpg" alt=""></div>
+            <div class="textoImg">Trotter</div>
+          </div></a>
+          <a class="col-md-3" href="./detallesPerritos.html"><div class="contImg " >
+            <div data-aos="zoom-in"><img class="btn--hembra" src="images/perros/vaca.jpg" alt=""></div>
+            <div class="textoImg">Vaca</div>
+          </div></a>
+          </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
           </script>
