--- a/about-us.html
+++ b/about-us.html
@@ -47,7 +47,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="donaciones.html">Donaciones</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Perritos</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Conócelos</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contactanos</a>
                       </li>
